/*               Riccardo Facchetti <riccardo@master.oasi.gpa.it>          */
/*               http://www.apcupsd.com                                    */
/*               http://www.sibbald.com/apcupsd                            */
/*               ftp://ftp.apcupsd.com                                     */
/***************************************************************************/

    - Conditional compilation of old and new network code. Old network code
      disabled by default while new network code enabled by default.
    - Removed old src/apcnet.c.old, old implementation of old networking.

----> Release apcupsd-3.10.0 (28 Jul 2002)
    - Added documentation for SNMP UPSes. Documented the use of
      --kill-on-powerfail switch during shutdown.
    - SuSE 8.0 is now supported.
    - Added forward declaration of inet_pton and localtime_r when they
      are extraobj.
    - Added inet_pton function. Implementation from Internet Software
      Consortium.
    - Made sp_flags private to the dumb driver.
    - Can't SET/CLEAR multiple flags: do them one by one. Fixed this
      bug in SNMP driver.
    - Added 127A and 128A cables support for dumb UPSes.
    - Implemented killpower for PowerNet MIB.
    - Implemented the SNMP driver for APC's PowerNet MIB.
    - Restructured UPSINFO so that now all the flags are contained
      into the Status bitmap.
    - *BSD should compile cleanly again.
    - Source tree is now under CVS revision control.
    - Added support for listening on specific IP addresses/subnets in
      NIS server, from Troy.
    - Doc updates, from Kern.

----> Release apcupsd-3.9.9 (18 May 2002)
    - Applied final Kern's patch.
    - Added a little program 'devicedbg' to help in debugging device
      drivers with gdb. To compile, 'make devicedbg' in src/.
    - Cygwin platform added (reorganized old cygwin files).
    - Darwin platform added.
    - compile line is 'gcc -c -g -O2   -I../include  apcaction.c'.